--- a/ginGormSqlXBase/docs/test.toml
+++ b/ginGormSqlXBase/docs/test.toml
@@ -13,3 +13,8 @@ listen=":8081"
         dbname = "mydb1"
         user = "postgres"
         password = "admin"
+[redisservers]
+    [redisservers.cache]
+        addr = "127.0.0.1:6379"
+        password = ""
+        db = 0
